[package]
name = "address_translation"
version = "0.1.1"
authors = ["Zhang Zongyu <zongyu@novazy.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/6-6-6/utils"
homepage = "https://github.com/6-6-6/utils/tree/master/Rust/address_translation"
description = "Some helpers for IPv6 Network Address Tranlation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.3.1"
